# ros2_neurofuzzy_ekf_localization

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/lib/robot_description_pkg/: c2_node
install/robot_description_pkg/lib/robot_description_pkg/: c1_node
install/robot_description_pkg/share/robot_description_pkg/: package.ps1  package.sh
install/robot_description_pkg/share/robot_description_pkg/urdf/: tb3_custom.urdf.xacro
install/share/control_nodes/: package.sh
install/share/robot_description_pkg/: package.sh  package.xml
install/share/robot_description_pkg/launch/: world_only.launch.py
install/share/robot_description_pkg/models/indoor_outdoor/: model.config
install/share/robot_description_pkg/urdf/: tb3_sensors.gazebo.xacro
install/share/robot_description_pkg/worlds/: indoor_outdoor.world
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/control_nodes/lib/control_nodes/: c1_node  c2_node
ros2_ws/install/control_nodes/share/control_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robot_description_pkg/share/robot_description_pkg/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/bt_orchestrator_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/bt_orchestrator_pkg/bt_xml/: localization_tree.xml
ros2_ws/src/bt_orchestrator_pkg/src/: main.cpp
ros2_ws/src/control_logic_bt/: CMakeLists.txt  package.xml
ros2_ws/src/control_logic_bt/config/: my_tree.xml
ros2_ws/src/control_logic_bt/src/: bt_main.cpp
ros2_ws/src/control_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/control_nodes/control_nodes/: c2_node.py  trajectory_controller.py
ros2_ws/src/control_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/control_pkg/config/: waypoints.yaml
ros2_ws/src/control_pkg/control_pkg/: trajectory_controller.py
ros2_ws/src/control_pkg/launch/: trajectory.launch.py
ros2_ws/src/control_pkg/resource/: control_pkg
ros2_ws/src/gps_ins_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/gps_ins_pkg/config/: ekf_1.yaml
ros2_ws/src/gps_ins_pkg/gps_ins_pkg/: complementary_filter.py
ros2_ws/src/gps_ins_pkg/launch/: ekf_1.launch.py
ros2_ws/src/gps_odometry_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/gps_odometry_pkg/config/: ekf_2.yaml
ros2_ws/src/gps_odometry_pkg/launch/: ekf_2.launch.py
ros2_ws/src/robot_bringup/: package.xml  setup.py
ros2_ws/src/robot_bringup/config/: EKF3.yaml  GPS_INS.yaml  GPS_odometer.yaml
ros2_ws/src/robot_bringup/launch/: dual_ekf_fusion.launch.py
ros2_ws/src/robot_bringup/robot_bringup/: complementary_filter.py  mock_ekf.py
ros2_ws/src/robot_description_pkg/: package.xml  setup.py
ros2_ws/src/robot_description_pkg/launch/: control_nodes.launch.py  spawn_robot.launch.py
ros2_ws/src/robot_description_pkg/robot_description_pkg/controllers/: c1_node.py
ros2_ws/src/robot_description_pkg/urdf/: tb3_custom.urdf.xacro  tb3_sensors.gazebo.xacro
ros2_ws/src/robot_description_pkg/worlds/: indoor_outdoor.world
(+3 files in other folders)
