<?xml version="1.0"?>
<package format="3">
  <name>control_nodes</name>
  <version>0.0.1</version>
  <description>Control signal nodes c1 and c2 for mobile robot trajectory generation</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>
  <build_type>ament_python</build_type>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>