<?xml version="1.0"?>
<package format="3">
  <name>control_pkg</name>
  <version>0.0.1</version>
  <description>Control signal nodes c1 and c2 for mobile robot trajectory generation</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>
  <build_depend>ament_python</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>